# moar

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  docker-compose.dev.yml  docker-compose.yml  install.sh  moar.example.toml
admin/: Dockerfile  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
admin/src/app/: globals.css  layout.tsx  page.tsx
admin/src/app/admin/: layout.tsx  page.tsx
admin/src/components/blossoms/: blossom-card.tsx  blossom-form.tsx  media-grid.tsx  media-upload.tsx
admin/src/components/layout/: header.tsx  restart-banner.tsx  tab-navigation.tsx
admin/src/components/paywalls/: paywall-avatar-stack.tsx  paywall-card.tsx  paywall-form.tsx  paywall-whitelist.tsx
admin/src/components/relays/: import-export.tsx  page-editor.tsx  policy-badges.tsx  preset-selector.tsx  relay-card.tsx  relay-form.tsx  relay-nip11-form.tsx  relay-policies-form.tsx  relay-settings-form.tsx  simple-relay-form.tsx
admin/src/components/shared/: confirm-dialog.tsx  nostr-avatar.tsx  sub-tabs.tsx  tag-input.tsx
admin/src/components/stats/: overview-cards.tsx  relay-stats-table.tsx  system-stats-card.tsx
admin/src/components/ui/: badge.tsx  collapsible-section.tsx  dropdown-menu.tsx  select.tsx  tooltip.tsx
admin/src/components/wot/: discovery-relays.tsx  wot-avatar-stack.tsx  wot-card.tsx  wot-follows.tsx  wot-form.tsx
admin/src/lib/api/: auth.ts  blossoms.ts  client.ts  paywalls.ts  relays.ts  stats.ts  status.ts  wot.ts
admin/src/lib/nostr/: pool.ts
docker/: Caddyfile.dev  Caddyfile.template  Dockerfile  Dockerfile.caddy  entrypoint.sh  moar.toml.template
docker/manager/: Dockerfile  manager.py
src/: auth.rs  config.rs  error.rs  gateway.rs  lib.rs  main.rs  nwc.rs  paywall.rs  policy.rs  rate_limit.rs  server.rs  stats.rs  wot.rs
src/blossom/: auth.rs  handlers.rs  mod.rs  store.rs
src/storage/: lmdb.rs  mod.rs
src/web/: admin.html  checkout.html  index.html
tests/: integration_read.rs  integration_write.rs
tests/common/: mod.rs
(+31 files in other folders)
