[package]
name = "moar"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["ws", "multipart"] }
nostr = { version = "0.33", features = ["std", "default"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
heed = { version = "0.20", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
once_cell = "1.19"
uuid = { version = "1.8", features = ["v4"] }
toml = "1.0.2"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors"] }
hyper-util = "0.1.20"
tower-service = "0.3.3"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3.32"
sha2 = "0.10"
base64 = "0.22"
mime_guess = "2.0"
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rand = "0.8"
qrcode = "0.14"
sysinfo = "0.33"
dashmap = "6"

[dev-dependencies]
tempfile = "3.10"
tokio-tungstenite = "0.28.0"
url = "2.5.8"
